[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/goco/GocoTools.gd" type="Script" id=1]

[node name="GocoTools" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 13.0
text = "generate base64 demo game files"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 17.0
margin_right = 320.0
margin_bottom = 40.0

[node name="SourceFile" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 320.0
margin_bottom = 23.0
size_flags_horizontal = 3
placeholder_text = "game_file.g8"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 271.0
margin_right = 320.0
margin_bottom = 23.0
text = "Browse"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 320.0
margin_bottom = 67.0

[node name="projectName" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_right = 280.0
margin_bottom = 23.0
size_flags_horizontal = 3
placeholder_text = "project_name"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 284.0
margin_right = 320.0
margin_bottom = 23.0
text = "Save"
